--- a/Views/Livro/Listagem.cshtml
+++ b/Views/Livro/Listagem.cshtml
@@ -1,45 +1,90 @@
 @model List<Livro>
 @{
-    ViewData["Title"] = "Listagem de Livros";
+    ViewData["Title"] = "Livros";
+    int filtroPorPagina = Int32.Parse(ViewData["livrosPorPagina"].ToString());
+    int paginaAtual = Int32.Parse(ViewData["paginaAtual"].ToString());
+
+    int numLivrosPorPagina = (Model.Count < filtroPorPagina ? Model.Count : filtroPorPagina);
+    
+    int numTotalPaginas = 0;
+    if(numLivrosPorPagina > 0)
+    {
+        numTotalPaginas = (Model.Count / numLivrosPorPagina + (Model.Count % numLivrosPorPagina == 0 ? 0 : 1));
+    }
 }
 <div class="row">
     <div class="col-md-12">
     <form class="form-inline" method="POST">
         <div class="form-group mb-2">
             <select name="TipoFiltro" class="form-control">
-                <option value="Autor">Autor</option>
                 <option value="Titulo">Título</option>
+                <option value="Autor">Autor</option>
             </select>
         </div>
         <div class="form-group mb-2 mx-sm-3">
-            <input type="text" placeholder="Filtro" name="Filtro" class="form-control" />
+            <input type="text" placeholder="Filtro" name="Filtro" class="form-control"/>
         </div>
-        <button type="submit" class="btn btn-primary mb-2">Pesquisar</button>
+        
+        <div class="form-group mb-2" style="margin-left: 15px;">
+            <select name="itensPorPagina" id="itensPorPagina" class="form-control">
+                <option value="10">10 Livros</option>
+                <option value="15">15 Livros</option>
+                <option value="30">30 Livros</option>
+                <option value="50">50 Livros</option>
+                <option value="@Model.Count">Todos os Livros</option>
+            </select>
+        </div>
+
+        <button type="submit" class="btn btn-primary mb-2" style="margin-left: 25px;">Pesquisar</button>
+
+        <div id="seletorPaginas" class="form-group mb-2" style="margin-left: 25px;">
+            <span>Página: </span>
+            
+            @for(int i=1; i < numTotalPaginas; i++)
+            {
+                if(i > 1)
+                {
+                    <span>,</span>
+                }
+                <span style="margin-left: 5px;"><a href="/Livro/Listagem?paginaAtual=@i">@i</a></span>
+            }
+        </div>
     </form>
+    
     </div>
+
 </div>
 
 <div class="row">
     <div class="col-md-12">
-        <table class="table table-striped"> 
-            <thead>
-                <tr><th>Id</th>
-                <th>Titulo</th>
-                <th>Autor</th>
-                <th>Ano</th>
-                <th></th>
-                </tr>
-            </thead>
+        <table class="table table-striped">
+            @if(Model.Count > 0)
+            {
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Titulo</th>
+                        <th>Autor</th>
+                        <th>Ano</th>
+                        <th></th>
+                    </tr>
+                </thead>
+            }
+            else
+            {
+                <br><br>
+                <h4 class="text-center">Não há valores para serem exibidos</h4>
+            }
             <tbody>
-                @foreach(Livro l in Model)
+                @for(int i = (paginaAtual - 1) * numLivrosPorPagina; i < (numLivrosPorPagina * paginaAtual < Model.Count ? numLivrosPorPagina * paginaAtual: Model.Count); i++)
                 {
-                <tr>
-                    <td>@l.Id</td>
-                    <td>@l.Titulo</td>
-                    <td>@l.Autor</td>
-                    <td>@l.Ano</td>
-                    <td><a href="/Livro/Edicao/@l.Id">Editar</a></td>
-                </tr>
+                    <tr>
+                        <td>@Model[i].Id</td>
+                        <td>@Model[i].Titulo</td>
+                        <td>@Model[i].Autor</td>
+                        <td>@Model[i].Ano</td>
+                        <td><a href="/Livro/Edicao/@Model[i].Id">Editar</a></td>
+                    </tr>
                 }
             </tbody>
         </table>
