--- a/Views/Emprestimo/Listagem.cshtml
+++ b/Views/Emprestimo/Listagem.cshtml
@@ -8,8 +8,8 @@
     <form class="form-inline" method="POST">
         <div class="form-group mb-2">
             <select name="TipoFiltro" class="form-control">
-                <option value="Usuario">Usuário</option>
                 <option value="Livro">Livro</option>
+                <option value="Usuario">Usuário</option>
             </select>
         </div>
         <div class="form-group mb-2 mx-sm-3">
@@ -22,32 +22,49 @@
 
 <div class="row">
     <div class="col-md-12">
-        <table > 
-            <thead>
-                <tr><th>Id</th>
-                <th>Usuario</th>
-                <th>Data Empréstimo</th>
-                <th>Data Devolução</th>
-                <th>Livro</th>
-                <th>Autor</th>
-                <th></th>
-                </tr>
-            </thead>
+        <table class="table table-striped"> 
+            @if(Model.Count > 0)
+            {
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Usuario</th>
+                        <th>Data Empréstimo</th>
+                        <th>Data Devolução</th>
+                        <th>Livro</th>
+                        <th>Autor</th>
+                        <th>Devolvido</th>
+                        <th></th>
+                    </tr>
+                </thead>
+            }
+            else
+            {
+                <br><br>
+                <h4 class="text-center">Não há valores para serem exibidos</h4>
+            }
             <tbody>
-                @foreach(Emprestimo e in Model)
+                @foreach(Emprestimo emp in Model)
                 {
-                <tr>
-                    <td>@e.Id</td>
-                    <td>@e.NomeUsuario</td>
-                    <td>@e.DataEmprestimo.ToString("dd/MM/yyyy")</td>
-                    <td>@e.DataDevolucao.ToString("dd/MM/yyyy")</td>
-                    <td>@e.Livro.Titulo</td>
-                    <td>@e.Livro.Autor</td>
-                    <td><a href="/Emprestimo/Edicao/@e.Id">Editar</a></td>
-                </tr>
+                    LivroService livroService = new LivroService();
+                    Livro livro = livroService.ObterPorId(emp.LivroId);       
+                    
+                    <!-- Linha-->
+                    <tr>
+                        <!-- Colunas-->
+                        <td>@emp.Id</td>
+                        <td>@emp.NomeUsuario</td>
+                        <td>@emp.DataEmprestimo.ToString("dd/MM/yyyy")</td>
+                        <td>@emp.DataDevolucao.ToString("dd/MM/yyyy")</td>
+                        <td>@livro.Titulo</td>
+                        <td>@livro.Autor</td>
+                        @if(emp.Devolvido)  { <td>Sim</td> }
+                        else                { <td>Não</td> }
+                        
+                        <td><a href="/Emprestimo/Edicao/@emp.Id">Editar</a></td>
+                    </tr>
                 }
             </tbody>
         </table>
     </div>
 </div>
-
