--- a/Views/Usuario/EditarUsuario.cshtml
+++ b/Views/Usuario/EditarUsuario.cshtml
@@ -1,5 +1,9 @@
 @model Usuario
 
+@{
+    ViewData["Title"] = "Editar Usuário";
+}
+
 <h1>Altere seus dados</h1>
 
 <form action="EditarUsuario" method="post">
