--- a/Views/Usuario/ExcluirUsuario.cshtml
+++ b/Views/Usuario/ExcluirUsuario.cshtml
@@ -1,11 +1,17 @@
 @model Usuario
-
-<h1>ALERTA!</h1>
-<h2>Tem certeza que deseja EXCLUIR o usuário @Model.Nome (@Model.Login)?</h2>
-<p>A exclusão é irreversível!</p>
+@{
+    ViewData["Title"] = "Confirmar";
+}
+<br/>
+<h1 class="text-center">Alerta!</h1>
+<br/><br/>
+<h4 class="text-center">Tem certeza que deseja excluir @Model.Nome (@Model.Login) para sempre?</h4>
+<br/><br/>
+<div class="row justify-content-md-center">
 
 <form action="ExcluirUsuario" method="post">
-    <input type="hidden" name="id" value="@Model.Id">
-    <input name="decisao" type="submit" value="CANCELAR">
-    <input name="decisao" type="submit" value="EXCLUIR">
-</form> 
+    <input type="hidden" name="Id" value="@Model.Id">
+    <input name="decisao" type="submit" style="width: 100%; margin-bottom: 5px;" class="btn btn-primary" value="EXCLUIR">
+    <input name="decisao" type="submit" style="width: 100%;" class="btn btn-primary" value="CANCELAR">
+</form>
+</div>
