--- a/Views/Usuario/NeedAdmin.cshtml
+++ b/Views/Usuario/NeedAdmin.cshtml
@@ -1,2 +1,7 @@
-<h1 class="text-danger">ACESSO NEGADO</h1>
-<h2>É necessário nível de acesso de ADMINISTRADOR para executar esta ação</h2> 
+@{
+    ViewData["Title"] = "Acesso Negado";
+}
+
+<h1 class="text-center">Acesso negado!</h1>
+<h4 class="text-center">Esta página só pode ser acessada por administradores</h4>
+<a class="text-center" href="/Home/Index">Voltar ao início</a>
